src/objects/Deal_Assessment_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Average__c</fullName>
        <formula>(Year_1__c + Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c + Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_10__c + Year_12__c) /  Deal_Assessment__r.Contract_Years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Assessment__c</fullName>
        <label>Deal Assessment</label>
        <referenceTo>OCD_Deal_Assessment__c</referenceTo>
        <relationshipName>Deal_Assessment_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCashFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCashFlow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Of_Business__c</fullName>
        <label>LOB</label>
        <picklist>
            <picklistValues>
                <fullName>CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trad IH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Name__c</fullName>
        <label>Proposal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue</label>
        <referenceTo>OCD_Deal_Assessment__c</referenceTo>
        <relationshipName>Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revvy_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revvy Quote</label>
        <referenceTo>REVVY__MnQuote__c</referenceTo>
        <relationshipName>Deal_Assessment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Year_1__c + Year_2__c + Year_3__c + Year_4__c + Year_5__c + Year_6__c + Year_7__c + Year_8__c + Year_9__c + Year_10__c + Year_10__c + Year_12__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gross Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gross Profit Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Text__c</fullName>
        <label>Value Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_10__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Year 10</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_11__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Year 11</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_12__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Year 12</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_1_F__c</fullName>
        <formula>Year_1__c</formula>
        <label>YR 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2_F__c</fullName>
        <formula>Year_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YR 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_3_F__c</fullName>
        <formula>Year_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YR 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Financial Assessment Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Assessment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>